Black & White particles + Direction Fix

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,7 +25,7 @@ body{
 }
 
 .four-three{
-	background-color: black;
+	// background-color: black;
 	@media only screen and (orientation: landscape){
 		width: 1024px;
 		height: 768px;
